fix alignment of invite anyone message

--- a/style.scss
+++ b/style.scss
@@ -1167,6 +1167,10 @@ div#group-create-tabs.item-list-tabs ul li a {
 		margin-top: -4px; /* nudge */ 
 	} 
 } 
+
+.invite-anyone .main-column #message { 
+	margin-top: 40px; 
+} 
 #send-invite-form .submit { 
 	margin-bottom: 40px; 
 }
